--- a/dev-workflow-ui/webContent/view/user.xhtml
+++ b/dev-workflow-ui/webContent/view/user.xhtml
@@ -12,7 +12,7 @@
 
 <h:body>
   <f:metadata>
-    <f:viewParam name="userId" value="#{userIvyDevWfBean.userId}" />
+    <f:viewParam name="userId" value="#{userDetailBean.userId}" />
   </f:metadata>
 
   <ui:composition template="../includes/template/template.xhtml">
