--- a/dev-workflow-ui/webContent/view/user.xhtml
+++ b/dev-workflow-ui/webContent/view/user.xhtml
@@ -46,7 +46,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-layout-bullets"></i>
-                  <h6 class="m-0">Tasks</h6>
+                  <h6 class="m-0">Open Tasks</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/userDetails/userdetail-usertasks.xhtml" />
@@ -57,7 +57,7 @@
               <div class="card-header">
                 <div class="card-title flex align-items-center">
                   <i class="pr-3 si si-information-circle"></i>
-                  <h6 class="m-0">Cases</h6>
+                  <h6 class="m-0">Started Cases</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/userDetails/userdetail-usercases.xhtml" />
