XIVY-15825 Use new API for translated custom field values
- Use the new API for translated custom field values
- Add tooltip to custom field value that shows label and value
- Add new test process that has configured multi language values for
custom fields
- Add tests for CustomFieldModel

--- a/dev-workflow-ui/webContent/resources/components/customFields.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/customFields.xhtml
@@ -10,10 +10,15 @@
   <p:dataTable id="customFieldsTable" var="field" value="#{cc.attrs.customFields}">
     <p:column headerText="Name">
       <h:outputText id="customFieldLabel" value="#{field.label}"/>
-      <p:tooltip for="customFieldLabel" value="#{field.description}" position="top"/>
+      <p:tooltip for="customFieldLabel" value="#{field.description}" position="top">
+        <h:outputText value="#{field.labelAndName}"/>
+        <br/>
+        <h:outputText value="#{field.description}"/>
+      </p:tooltip>
     </p:column>
     <p:column headerText="Value">
-      <h:outputText value="#{field.value}"/>
+      <h:outputText id="customFieldValue" value="#{field.value}"/>
+      <p:tooltip for="customFieldValue" value="#{field.valueDescription}" position="top"/>
     </p:column>
     <p:column headerText="Type">
       <h:outputText value="#{field.type}"/>
