--- a/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -4,20 +4,20 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
-  <c:set var="case" value="#{casesDetailsIvyDevWfBean.selectedCase}" />
+  <c:set var="case" value="#{casesDetailsIvyDevWfBean.selectedCaseModel}" />
 
   <p:panelGrid id="caseDetails" columns="4" layout="flex" contentStyleClass="align-items-center"
     columnClasses="details-description-label col-6 md:col-2, col-6 md:col-4,
      details-description-label col-6 md:col-2, col-6 md:col-4">
 
     <h:outputText value="Case ID" />
-    <h:outputText value="#{case.uuid()}" id="caseId"/>
+    <h:outputText value="#{case.uuid}" id="caseId"/>
 
     <h:outputText value="Case name" />
-    <h:outputText value="#{case.getName()}" id="caseName" />
+    <h:outputText value="#{case.name}" id="caseName" />
 
     <h:outputText value="Case Owner" />
-    <h:outputText value="#{case.ownerName}" id="taskResponsible" />
+    <h:outputText value="#{case.owners}" id="caseResponsible" />
 
     <h:outputText value="Creator" />
     <jc:user user="#{case.creatorUser}" id="creatorUser" />
@@ -37,6 +37,6 @@
     <h:outputText value="Description" />
     <h:outputText value="#{casesDetailsIvyDevWfBean.description}" id="caseDescription" />
   </p:panelGrid>
-  <p:tooltip for="caseId" value="ID: #{case.getId()}" />
+  <p:tooltip for="caseId" value="ID: #{case.id}" />
 
 </ui:composition>
