XIVY-15992 Block loginTable if not dev or demo mode

--- a/dev-workflow-ui/webContent/view/loginTable.xhtml
+++ b/dev-workflow-ui/webContent/view/loginTable.xhtml
@@ -9,6 +9,8 @@
   </f:metadata>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
+      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotDevMode}" />
+
       <h:panelGroup layout="block" styleClass="static-message" rendered="#{!loginIvyDevWfBean.loggedIn}">
         <p:staticMessage severity="warn" summary="Warning" detail="You need to login to access that page" id="loginMessage"/>
       </h:panelGroup>
