XIVY-16062 Remove serenity usage + change to new frame template

--- a/dev-workflow-ui/webContent/includes/template/statisticsCardBare.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/statisticsCardBare.xhtml
@@ -1,6 +1,5 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
-  xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:p="http://primefaces.org/ui"
-  xmlns:pa="http://primefaces.org/serenity">
+  xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:p="http://primefaces.org/ui">
   <div class="card flex flex-column flex-grow-1 m-2 max-h-26rem" style="min-width: 220px;">
     <ui:insert name="content"/>
   </div>
