--- a/dev-workflow-ui/webContent/includes/template/statisticsCard.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/statisticsCard.xhtml
@@ -1,6 +1,5 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
-  xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:p="http://primefaces.org/ui"
-  xmlns:pa="http://primefaces.org/serenity">
+  xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:p="http://primefaces.org/ui">
   <div class="card flex flex-column flex-grow-1 w-max m-2 my max-w-24rem max-h-26rem">
     <h4><ui:insert name="title"/></h4>
       <div class="flex flex-column align-items-center justify-content-center h-full my-2" style="min-width: 220px">
