--- a/dev-workflow-ui/webContent/view/case.xhtml
+++ b/dev-workflow-ui/webContent/view/case.xhtml
@@ -2,8 +2,7 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
   xmlns:pe="http://primefaces.org/ui/extensions" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-  xmlns:pm="http://primefaces.org/serenity-ivy" xmlns:jc="http://xmlns.jcp.org/jsf/composite/components"
-  xmlns:jsf="http://xmlns.jcp.org/jsf">
+  xmlns:jc="http://xmlns.jcp.org/jsf/composite/components" xmlns:jsf="http://xmlns.jcp.org/jsf">
 
 <h:body>
   <f:metadata>
