XIVY-16048 Send 401 status code if login fails
Send status code 401 if login fails
Enhance WebTestLogin to check that status code is 401 and not an AJAX
request

--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -29,7 +29,7 @@
         <p:inputText id="userName" autocomplete="off" value="#{loginIvyDevWfBean.username}" required="true" placeholder="Username / Email" />
         <p:password id="password" autocomplete="off" value="#{loginIvyDevWfBean.password}" required="true" placeholder="Password" />
 
-        <p:commandButton update="@form" id="login" actionListener="#{loginIvyDevWfBean.customLogin}" value="Sign In" icon="si si-login-3" />
+        <p:commandButton update="@form" id="login" actionListener="#{loginIvyDevWfBean.customLogin}" value="Sign In" icon="si si-login-3" ajax="false"/>
         <p:messages globalOnly="true" id="loginMessage" />
 
         <section class="oauth-providers">
