XIVY-1259 Fix deprecation warnings
Just getting rid of depreaction warnings. The UI
will need to improved afterwards in its own story.

--- a/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -24,7 +24,9 @@
     </p:column>
 
     <p:column headerText="Responsible" responsivePriority="4">
-      <jc:user user="#{task.activator}" />
+      <ui:repeat value="#{task.responsibles}" var="responsible">
+        <jc:user user="#{responsible}" />
+      </ui:repeat>
     </p:column>
 
     <p:column headerText="Start" width="100">
