--- a/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
@@ -20,9 +20,10 @@
         <p:column headerText="Name" filterBy="#{task.name}" sortBy="#{task.name}" responsivePriority="1">
           <h:outputText id="taskName" value="#{task.name}" />
         </p:column>
-        <p:column headerText="Responsible" filterBy="#{task.activator}" sortBy="#{task.activatorName}" width="160px"
-          responsivePriority="3">
-          <jc:user user="#{task.activator}" />
+        <p:column headerText="Responsible" width="160px" responsivePriority="3">
+          <ui:repeat value="#{task.responsibles}" var="responsible">
+            <jc:user user="#{responsible}" />
+          </ui:repeat>
         </p:column>
         <p:column headerText="Start" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="3"
           width="100px">
