--- a/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
@@ -38,7 +38,7 @@
     <jc:user user="#{task.workerUser}" id="workingUser" />
 
     <h:outputText value="Responsible" />
-    <ui:repeat value="#{task.responsibles}" var="responsible">
+    <ui:repeat id="taskResponsibles" value="#{task.responsibles}" var="responsible">
       <jc:user id="taskResponsible" user="#{responsible}" />
     </ui:repeat>
 
