--- a/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
@@ -21,8 +21,8 @@
           <h:outputText id="taskName" value="#{task.name}" />
         </p:column>
         <p:column headerText="Responsible" width="160px" responsivePriority="3">
-          <ui:repeat value="#{task.responsibles}" var="responsible">
-            <jc:user user="#{responsible}" />
+          <ui:repeat id="taskResponsibles" value="#{task.responsibles}" var="responsible">
+            <jc:user id="taskResponsible" user="#{responsible}" />
           </ui:repeat>
         </p:column>
         <p:column headerText="Start" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="3"
